# learning-juce-framework

./: .gitignore  CMakeLists.txt
src/: BlueComponent.cpp  BlueComponent.h  MainComponent.cpp  MainComponent.h  main.cpp
